Updated Readme and added background color

--- a/css/styles.css
+++ b/css/styles.css
@@ -6,7 +6,7 @@
 
 body {
     font-family: Arial, sans-serif;
-    background-color: rgb(36, 36, 36);
+    background-color: #0b5394;
     display: flex;
     justify-content: center;
     align-items: center;
